# xml-requirements

./: Cargo.toml  README.md  pre-commit
src/: config.rs  error.rs  main.rs  opt.rs  requirements.rs  violation.rs
src/opt/: error.rs
tests/: cli.rs
