[package]
name = "xml-requirements"
version = "0.1.0"
authors = ["rsookram <rashadsookram@gmail.com>"]
edition = "2018"

[dependencies]
roxmltree = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
toml = "0.5.6"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"

[profile.release]
lto = true
