[package]
name = "xml-requirements"
version = "0.1.0"
authors = ["rsookram <rashadsookram@gmail.com>"]
edition = "2018"
description = "Command-line tool to lint XML files based on the supplied configuration"
readme = "README.md"
repository = "https://github.com/rsookram/xml-requirements"
license = "MIT OR Apache-2.0"
keywords = ["xml", "linter"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
roxmltree = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
pico-args = "0.3"

[dev-dependencies]
assert_cmd = "1.0.1"
tempfile = "3.1.0"

[profile.release]
lto = true
codegen-units = 1
